[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/hyh.cutscene_graph/scenes/EditorGraphNodeBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/hyh.cutscene_graph/scripts/EditorTextNode.gd" type="Script" id=2]


[node name="EditorTextNode" instance=ExtResource( 1 )]
margin_right = 630.0
margin_bottom = 304.0
title = "Dialogue"
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.94902, 0.27451, 0.478431, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.811765, 0.956863, 0.298039, 1 )
script = ExtResource( 2 )
node_resource = null

[node name="RootContainer" type="MarginContainer" parent="." index="0"]
margin_left = 16.0
margin_top = 24.0
margin_right = 614.0
margin_bottom = 298.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VerticalLayout" type="VBoxContainer" parent="RootContainer" index="0"]
margin_left = 10.0
margin_top = 10.0
margin_right = 588.0
margin_bottom = 264.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="OptionsContainer" type="GridContainer" parent="RootContainer/VerticalLayout" index="0"]
margin_right = 578.0
margin_bottom = 50.0
custom_constants/vseparation = 10
custom_constants/hseparation = 25
columns = 2

[node name="Label" type="Label" parent="RootContainer/VerticalLayout/OptionsContainer" index="0"]
margin_top = 3.0
margin_right = 64.0
margin_bottom = 17.0
text = "Character:"

[node name="CharacterSelect" type="OptionButton" parent="RootContainer/VerticalLayout/OptionsContainer" index="1"]
margin_left = 89.0
margin_right = 578.0
margin_bottom = 20.0
size_flags_horizontal = 3
toggle_mode = false

[node name="Label2" type="Label" parent="RootContainer/VerticalLayout/OptionsContainer" index="2"]
margin_top = 33.0
margin_right = 64.0
margin_bottom = 47.0
text = "Variant:"

[node name="VariantSelect" type="OptionButton" parent="RootContainer/VerticalLayout/OptionsContainer" index="3"]
margin_left = 89.0
margin_top = 30.0
margin_right = 578.0
margin_bottom = 50.0
size_flags_horizontal = 3
toggle_mode = false

[node name="TextEdit" type="TextEdit" parent="RootContainer/VerticalLayout" index="1"]
margin_top = 60.0
margin_right = 578.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 160 )
mouse_default_cursor_shape = 0
size_flags_vertical = 3
custom_constants/line_spacing = 8
show_line_numbers = true

[node name="TranslationContainer" type="GridContainer" parent="RootContainer/VerticalLayout" index="2"]
margin_top = 230.0
margin_right = 578.0
margin_bottom = 254.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="Label" type="Label" parent="RootContainer/VerticalLayout/TranslationContainer" index="0"]
margin_top = 5.0
margin_right = 101.0
margin_bottom = 19.0
text = "Translation Key:"

[node name="TranslationKeyEdit" type="LineEdit" parent="RootContainer/VerticalLayout/TranslationContainer" index="1"]
margin_left = 111.0
margin_right = 578.0
margin_bottom = 24.0
size_flags_horizontal = 3
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="item_selected" from="RootContainer/VerticalLayout/OptionsContainer/CharacterSelect" to="." method="_on_CharacterSelect_item_selected"]
[connection signal="item_selected" from="RootContainer/VerticalLayout/OptionsContainer/VariantSelect" to="." method="_on_VariantSelect_item_selected"]
[connection signal="text_changed" from="RootContainer/VerticalLayout/TextEdit" to="." method="_on_TextEdit_text_changed"]
